<resources>
  <string name="app_name">Habbit Trigger</string>

  <string name="trigger">Trigger</string>

  <!--form-->
  <!--<string name="title">Title</string>-->
  <string name="repeat">Repeat</string>

  <!--buttons-->
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="set">Set</string>

  <!--hints-->
  <string name="hint_trigger_title">Get off the desk</string>

  <!--days-->
  <string name="monday">Monday</string>
  <string name="tuesday">Tuesday</string>
  <string name="wednesday">Wednesday</string>
  <string name="thursday">Thursday</string>
  <string name="friday">Friday</string>
  <string name="saturday">Saturday</string>
  <string name="sunday">Sunday</string>

</resources>
