<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <CheckBox
      android:id="@+id/mondayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/monday" />

    <CheckBox
      android:id="@+id/tuesdayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/tuesday" />

    <CheckBox
      android:id="@+id/wednesdayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/wednesday" />

    <CheckBox
      android:id="@+id/thursdayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/thursday" />

    <CheckBox
      android:id="@+id/fridayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/friday" />

    <CheckBox
      android:id="@+id/saturdayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/saturday" />

    <CheckBox
      android:id="@+id/sundayCheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/sunday" />

  </LinearLayout>

</android.support.constraint.ConstraintLayout>